[gd_scene load_steps=5 format=3 uid="uid://dxrbgvxqbyw5o"]

[ext_resource type="Script" path="res://scenes/toolbox/examples/root/2d/dialogs/color-rect-dialog/color-rect-dialog.gd" id="1"]
[ext_resource type="FontFile" uid="uid://xxlx2xsv2f0e" path="res://assets/fonts/montreal/Montreal-Bold.ttf" id="2_n4bh3"]
[ext_resource type="Theme" uid="uid://ccr2k4swymel8" path="res://assets/themes/default_button_theme.tres" id="3_i1nys"]

[sub_resource type="LabelSettings" id="LabelSettings_xdmgg"]
font = ExtResource("2_n4bh3")

[node name="CustomDialog" type="Node2D"]
z_index = 1
z_as_relative = false
script = ExtResource("1")

[node name="ResponseLabel" type="Label" parent="."]
custom_minimum_size = Vector2(200, 40)
offset_left = 294.0
offset_top = 62.0
offset_right = 494.0
offset_bottom = 102.0

[node name="OpenDialogButton" type="Button" parent="."]
offset_left = 50.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 90.0
theme = ExtResource("3_i1nys")
text = "Open Custom Dialog"

[node name="Dialog" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="DialogBackground" type="ColorRect" parent="Dialog"]
layout_mode = 0
offset_left = 225.0
offset_top = 162.0
offset_right = 549.0
offset_bottom = 313.0
color = Color(0.164706, 0.164706, 0.164706, 1)

[node name="BorderColorRect" type="ColorRect" parent="Dialog/DialogBackground"]
layout_mode = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 320.0
offset_bottom = 147.0
color = Color(0.180392, 0.607843, 0.635294, 0.898039)

[node name="BackgroundColorRect2" type="ColorRect" parent="Dialog/DialogBackground"]
layout_mode = 0
offset_left = 5.0
offset_top = 6.0
offset_right = 318.0
offset_bottom = 145.0
color = Color(0.0862745, 0.0862745, 0.0862745, 0.870588)

[node name="QuestionLabel" type="Label" parent="Dialog/DialogBackground"]
layout_mode = 0
offset_left = 70.0
offset_top = 50.0
offset_right = 262.0
offset_bottom = 81.0
text = "Do you like ColorRects?"
label_settings = SubResource("LabelSettings_xdmgg")

[node name="YesButton" type="Button" parent="Dialog/DialogBackground"]
layout_mode = 0
offset_left = 90.0
offset_top = 85.0
offset_right = 130.0
offset_bottom = 115.0
theme = ExtResource("3_i1nys")
text = "Yes"

[node name="NoButton" type="Button" parent="Dialog/DialogBackground"]
layout_mode = 0
offset_left = 187.0
offset_top = 85.0
offset_right = 221.0
offset_bottom = 115.0
theme = ExtResource("3_i1nys")
text = "No"

[node name="CancelButton" type="Button" parent="Dialog/DialogBackground"]
layout_mode = 0
offset_left = 287.0
offset_top = 10.0
offset_right = 306.0
offset_bottom = 40.0
theme = ExtResource("3_i1nys")
text = "X"

[connection signal="pressed" from="OpenDialogButton" to="." method="_on_OpenDialogButton_pressed"]
[connection signal="pressed" from="Dialog/DialogBackground/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="Dialog/DialogBackground/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="Dialog/DialogBackground/CancelButton" to="." method="_on_cancel_button_pressed"]
